<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">
    
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/sign_up_requests"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        tools:text="Batuhan Erdem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/sign_up_requests"
        android:textColor="#FF637587"
        android:textSize="13sp"
        android:layout_marginStart="15dp"
        tools:text="batuhanerdem173@gmail.com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAccept"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_gray_edittext"
        app:layout_constraintStart_toStartOf="@id/tvEmail"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeny"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/deny"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_transparent_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>