<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.all_student_listing.AllStudentListingFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/students"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <androidx.appcompat.widget.SearchView-->
    <!--        android:id="@+id/searchView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="80dp"-->
    <!--        android:autofillHints="Search"-->
    <!--        android:visibility="invisible"-->
    <!--        tools:visibility="visible"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:queryHint="Search" />-->

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_search"
        android:drawableStart="@drawable/icon_search_gray"
        android:drawablePadding="10dp"
        android:hint="@string/search_student"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/unselected_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/edtSearch"
        app:layout_constraintEnd_toEndOf="@id/edtSearch"
        app:layout_constraintTop_toTopOf="@id/edtSearch" />

    <TextView
        android:id="@+id/noStudentFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lexend_semibold"
        android:text="@string/no_students"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:visibility="invisible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStudent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSearch"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_student"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="83dp" />

</androidx.constraintlayout.widget.ConstraintLayout>